Update to webmap behind blog - no longer interactive.

--- a/web/indexstyles.css
+++ b/web/indexstyles.css
@@ -16,7 +16,7 @@ body, .row, .col-xs-12 {
 #textbox {
     overflow-y: scroll;
     background-color: rgba(192, 192, 192, 0.4);
-    padding: 24px;
+    padding: 48px;
     display: block;
     color: black;
     font-size: 24px;
@@ -25,7 +25,7 @@ body, .row, .col-xs-12 {
 
 #textbox-row {
     position: absolute;
-    margin: 35px;
+    margin: 0px;
     margin-bottom: 0;
     z-index: 1;
     top: 0;
